--- a/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
+++ b/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
@@ -1,44 +1,35 @@
 ﻿@page "/countries"
-@inject IRepository repository
 
 <h3>Paises</h3>
 
-@if(Countries == null)
-{
-    <p>Cargando...</p>
-}
-else
-{
-<table>
-    <thead>
-        <tr>
-            <th>País</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach( var country in Countries)
-        {
-        <tr>
-            <td>@country.Name</td>
-            <td>
-                <a class="btn btn-warning">Editar</a>
-                <button class="btn btn-danger">Borrar</button>
+<div class="mb-3">
+    <a class="btn btn-primary" href="/countries/create">Nuevo País</a>
+</div>
 
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
-}
+<GenericList MyList="Countries">
+    <Body>
+        <table>
+            <thead>
+                <tr>
+                    <th>País</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var country in Countries!)
+                {
+                    <tr>
+                        <td>@country.Name</td>
+                        <td>
+                            <a class="btn btn-warning">Editar</a>
+                            <button class="btn btn-danger">Borrar</button>
 
-@code {
-    public List<Country>? Countries{ get; set; }
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
-    protected async override Task OnInitializedAsync()
-    {
-        await base.OnInitializedAsync();
-        var responseHttp = await repository.GetAsync<List<Country>>("api/countries");
-        Countries = responseHttp.Response;
-    }
-}
+    </Body>
+</GenericList>
+
