chore: remove some files, AsNoTracking option and Loading component

--- a/Orders/Orders.Frontend/Shared/GenericList.razor
+++ b/Orders/Orders.Frontend/Shared/GenericList.razor
@@ -4,9 +4,7 @@
 {
     @if(Loading is null)
     {
-        <div class="d-flex justify-content-center align-items-center">
-            <img src="https://media.tenor.com/G7LfW0O5qb8AAAAi/loading-gif.gif" width=90  />
-        </div>
+        <Loading/>
     }
     else
     {
