--- a/Orders/Orders.Frontend/Layout/NavMenu.razor
+++ b/Orders/Orders.Frontend/Layout/NavMenu.razor
@@ -14,9 +14,16 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/categories">
+                <span class="bi bi-list-check-fill-nav-menu" aria-hidden="true"></span> Categorías
+            </NavLink>
+        </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/countries">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Países
+                <span class="bi bi-globe-americas-fill-nav-menu" aria-hidden="true"></span> Países
             </NavLink>
         </div>
     </nav>
